--- a/translations/frontend-app-learning/src/i18n/messages/fr.json
+++ b/translations/frontend-app-learning/src/i18n/messages/fr.json
@@ -411,7 +411,7 @@
   "learning.outline.alert.scheduled-content.body": "Ce cours aura davantage de contenu prochainement. Surveillez vos e-mails ou revenez sur ce cours pour voir les mises à jour.",
   "learning.outline.alert.scheduled-content.button": "Voir le calendrier des cours",
   "progress.ungradedAlert": "Pour progresser sur les aspects non notés du cours, consultez votre {outlineLink} .",
-  "progress.footnotes.droppableAssignments": "Un total de {numDroppable, plural, one{# {assignmentType} avec la note la plus basse sera ignoré} other{# {assignmentType} avec les notes les plus basses seront ignorés}}.",
+  "progress.footnotes.droppableAssignments": "Un total de {numDroppable, plural, other{# {assignmentType} avec les notes les plus basses seront ignorés}}.",
   "calculator.instructions.button.label": "Instructions pour la calculatrice",
   "calculator.instructions": "Pour des informations détaillées, consultez le {expressions_link} .",
   "calculator.instructions.support.title": "Centre d'aide",
