Fixed translation files with syntax issue

--- a/translations/frontend-app-learning/src/i18n/messages/es_419.json
+++ b/translations/frontend-app-learning/src/i18n/messages/es_419.json
@@ -207,7 +207,7 @@
   "tours.weeklyGoalsCheckpoint.title": "Establecer un objetivo del curso",
   "tours.newUserModal.title": "¡{welcome} curso de {siteName}!",
   "learning.effortEstimation.combinedEstimate": "{minutes} + {activities}",
-  "learning.effortEstimation.activities": "{activityCount, plural, other {# actividades}}",
+  "learning.effortEstimation.activities": "{activityCount, plural, one {# actividad} many {# actividades} other {# actividades}}",
   "learning.effortEstimation.minutesAbbreviated": "{minuteCount, plural, other {# min}}",
   "learning.effortEstimation.minutesFull": "{minuteCount, plural, other {# minutos}}",
   "learning.streakcelebration.factoida": "Los usuarios que aprenden {streak_length} días seguidos {bolded_section} que los que no lo hacen.",
