--- a/translations/frontend-app-learning/src/i18n/messages/fr.json
+++ b/translations/frontend-app-learning/src/i18n/messages/fr.json
@@ -207,9 +207,9 @@
   "tours.weeklyGoalsCheckpoint.title": "Fixer un objectif de cours",
   "tours.newUserModal.title": "{welcome} cours sur {siteName}!",
   "learning.effortEstimation.combinedEstimate": "{minutes} + {activities}",
-  "learning.effortEstimation.activities": "{ActivityCount, pluriel, autres {# activités}}",
-  "learning.effortEstimation.minutesAbbreviated": "{MinuteCount, pluriel, autres {# min}}",
-  "learning.effortEstimation.minutesFull": "{MinuteCount, pluriel, autres {# Minutes}}",
+  "learning.effortEstimation.activities": "{activityCount, plural, one {# activité} many {# activités} other {# activités}}",
+  "learning.effortEstimation.minutesAbbreviated": "{minuteCount, plural, one {# min} many {# min} other {# min}}",
+  "learning.effortEstimation.minutesFull": "{minuteCount, plural, one {# minute} many {# minutes} other {# minutes}}",
   "learning.streakcelebration.factoida": "Les utilisateurs qui apprennent {streak_length} jours de suite {bolded_section} que ceux qui ne le font pas.",
   "learning.streakcelebration.factoidb": "Les utilisateurs qui apprennent {streak_length} jours de suite {bolded_section} par rapport à ceux qui ne le font pas.",
   "learning.streakCelebration.streakCelebrationCouponEndDateMessage": "Fin le {date} .",
