Fixed translation files with syntax issue

--- a/translations/frontend-app-learning/src/i18n/messages/es_419.json
+++ b/translations/frontend-app-learning/src/i18n/messages/es_419.json
@@ -208,8 +208,8 @@
   "tours.newUserModal.title": "¡{welcome} curso de {siteName}!",
   "learning.effortEstimation.combinedEstimate": "{minutes} + {activities}",
   "learning.effortEstimation.activities": "{activityCount, plural, one {# actividad} many {# actividades} other {# actividades}}",
-  "learning.effortEstimation.minutesAbbreviated": "{minuteCount, plural, other {# min}}",
-  "learning.effortEstimation.minutesFull": "{minuteCount, plural, other {# minutos}}",
+  "learning.effortEstimation.minutesAbbreviated": "{minuteCount, plural, one {# min} many {# min} other {# min}}",
+  "learning.effortEstimation.minutesFull": "{minuteCount, plural, one {# minuto} many {# minutos} other {# minutos}}",
   "learning.streakcelebration.factoida": "Los usuarios que aprenden {streak_length} días seguidos {bolded_section} que los que no lo hacen.",
   "learning.streakcelebration.factoidb": "Los usuarios que aprenden {streak_length} días seguidos {bolded_section} frente a los que no lo hacen.",
   "learning.streakCelebration.streakCelebrationCouponEndDateMessage": "Termina el {date}.",
